@@ -340,6 +340,9 @@ flattened fields is used in Join (daijy)
 PIG-1180: Piggybank should compile even if we only have
 "pig-withouthadoop.jar" but no "pig.jar" in the pig home directory (daijy)
 
+PIG-1185: Data bags do not close spill files after using iterator to read
+tuples (yinghe via daijy)
+
 Release 0.5.0
 
 INCOMPATIBLE CHANGES
